fix(client/floating_buttons): clipped by floating content header

--- a/apps/client/src/widgets/FloatingButtons.css
+++ b/apps/client/src/widgets/FloatingButtons.css
@@ -6,11 +6,12 @@
 .floating-buttons-children,
 .show-floating-buttons {
     position: absolute;
-    top: calc(var(--floating-buttons-vert-offset, 14px) + var(--ribbon-height, 0));
+    top: calc(var(--floating-buttons-vert-offset, 14px) + var(--ribbon-height, 0px) + var(--content-header-height, 0px));
     inset-inline-end: var(--floating-buttons-horiz-offset, 10px);
     display: flex;
     flex-direction: row;
     z-index: 100;
+    transition: top 0.3s ease;
 }
 
 .note-split.rtl .floating-buttons-children,
